<resources>
    <string name="abc_action_bar_home_description">Navigate home</string>
    <string name="abc_action_bar_up_description">Navigate up</string>
    <string name="abc_action_menu_overflow_description">More options</string>
    <string name="abc_action_mode_done">Done</string>
    <string name="abc_activity_chooser_view_see_all">See all</string>
    <string name="abc_activitychooserview_choose_application">Choose an app</string>
    <string name="abc_capital_off">OFF</string>
    <string name="abc_capital_on">ON</string>
    <string name="abc_menu_alt_shortcut_label">Alt+</string>
    <string name="abc_menu_ctrl_shortcut_label">Ctrl+</string>
    <string name="abc_menu_delete_shortcut_label">delete</string>
    <string name="abc_menu_enter_shortcut_label">enter</string>
    <string name="abc_menu_function_shortcut_label">Function+</string>
    <string name="abc_menu_meta_shortcut_label">Meta+</string>
    <string name="abc_menu_shift_shortcut_label">Shift+</string>
    <string name="abc_menu_space_shortcut_label">space</string>
    <string name="abc_menu_sym_shortcut_label">Sym+</string>
    <string name="abc_prepend_shortcut_label">Menu+</string>
    <string name="abc_search_hint">Search…</string>
    <string name="abc_searchview_description_clear">Clear query</string>
    <string name="abc_searchview_description_query">Search query</string>
    <string name="abc_searchview_description_search">Search</string>
    <string name="abc_searchview_description_submit">Submit query</string>
    <string name="abc_searchview_description_voice">Voice search</string>
    <string name="abc_shareactionprovider_share_with">Share with</string>
    <string name="abc_shareactionprovider_share_with_application">Share with %s</string>
    <string name="abc_toolbar_collapse_description">Collapse</string>
    <string name="about_android_version">Android version</string>
    <string name="about_app_version">App version</string>
    <string name="about_device">Device</string>
    <string name="about_email">Email</string>
    <string name="about_hwid">HWID</string>
    <string name="about_info">Info</string>
    <string name="about_links">Links</string>
    <string name="about_model_name">Model name</string>
    <string name="about_privacy_policy">Privacy Policy</string>
    <string name="about_telegram">Telegram</string>
    <string name="about_terms_of_services">Terms of Services</string>
    <string name="about_third_party_libraries">Third-Party Libraries</string>
    <string name="about_title">About</string>
    <string name="about_xray_version">Xray version</string>
    <string name="activity_scanner_select_photo">Album</string>
    <string name="activity_scanner_toggle_torch">Flash</string>
    <string name="androidx_compose_foundation_autofill">Autofill</string>
    <string name="androidx_compose_ui_autofill">Autofill</string>
    <string name="androidx_startup">androidx.startup</string>
    <string name="app_dev_mode">DEV Version</string>
    <string name="app_name">Happ</string>
    <string name="app_tile_first_use">Before connecting for the first time, open the application and add the configuration</string>
    <string name="app_tile_name">Switch</string>
    <string name="app_update_header">Download Manager</string>
    <string name="app_update_info_size">Size:</string>
    <string name="app_update_info_title">App Update</string>
    <string name="app_update_info_version">Version:</string>
    <string name="app_widget_connected">Connected</string>
    <string name="app_widget_connecting">Connecting</string>
    <string name="app_widget_name">Switch</string>
    <string name="appbar_scrolling_view_behavior">com.google.android.material.appbar.AppBarLayout$ScrollingViewBehavior</string>
    <string name="auto_update_subscription_info_text">Autoupdate - %d h.</string>
    <string name="back">Back</string>
    <string name="block_application_button_update_text">Get it now</string>
    <string name="block_application_text">"Please update to the latest version
to continue using the app."</string>
    <string name="block_application_text_new">"A New version of Happ
is available"</string>
    <string name="bottom_sheet_behavior">com.google.android.material.bottomsheet.BottomSheetBehavior</string>
    <string name="bottomsheet_action_collapse">Collapse</string>
    <string name="bottomsheet_action_collapse_description">Collapse the bottom sheet</string>
    <string name="bottomsheet_action_expand">Expand</string>
    <string name="bottomsheet_action_expand_description">Expand the bottom sheet</string>
    <string name="bottomsheet_action_expand_halfway">Expand halfway</string>
    <string name="bottomsheet_action_half_expand_description">Half expand the bottom sheet</string>
    <string name="bottomsheet_drag_handle_content_description">Drag handle</string>
    <string name="bottomsheet_state_collapsed">Collapsed</string>
    <string name="bottomsheet_state_expanded">Expanded</string>
    <string name="bottomsheet_state_half_expanded">Half expanded</string>
    <string name="btn_ai_helper">AI Helper</string>
    <string name="btn_disconnect">Connected</string>
    <string name="btn_import_config_clipboard">Clipboard</string>
    <string name="btn_import_config_qrcode">QR-Code</string>
    <string name="call_notification_answer_action">Answer</string>
    <string name="call_notification_answer_video_action">Video</string>
    <string name="call_notification_decline_action">Decline</string>
    <string name="call_notification_hang_up_action">Hang Up</string>
    <string name="call_notification_incoming_text">Incoming call</string>
    <string name="call_notification_ongoing_text">Ongoing call</string>
    <string name="call_notification_screening_text">Screening an incoming call</string>
    <string name="cancel">Cancel</string>
    <string name="character_counter_content_description">Characters entered %1$d of %2$d</string>
    <string name="character_counter_overflowed_content_description">Character limit exceeded %1$d of %2$d</string>
    <string name="character_counter_pattern">%1$d/%2$d</string>
    <string name="check_icon">Checked</string>
    <string name="child_count_error">FABProgressCircle layout must only contain one child.</string>
    <string name="clear_text_end_icon_content_description">Clear text</string>
    <string name="close">Close</string>
    <string name="close_drawer">Close navigation menu</string>
    <string name="close_sheet">Close sheet</string>
    <string name="common_google_play_services_enable_button">Enable</string>
    <string name="common_google_play_services_enable_text">"%1$s won't work unless you enable Google Play services."</string>
    <string name="common_google_play_services_enable_title">Enable Google Play services</string>
    <string name="common_google_play_services_install_button">Install</string>
    <string name="common_google_play_services_install_text">"%1$s won't run without Google Play services, which are missing from your device."</string>
    <string name="common_google_play_services_install_title">Get Google Play services</string>
    <string name="common_google_play_services_notification_channel_name">Google Play services availability</string>
    <string name="common_google_play_services_notification_ticker">Google Play services error</string>
    <string name="common_google_play_services_unknown_issue">%1$s is having trouble with Google Play services. Please try again.</string>
    <string name="common_google_play_services_unsupported_text">"%1$s won't run without Google Play services, which are not supported by your device."</string>
    <string name="common_google_play_services_update_button">Update</string>
    <string name="common_google_play_services_update_text">"%1$s won't run unless you update Google Play services."</string>
    <string name="common_google_play_services_update_title">Update Google Play services</string>
    <string name="common_google_play_services_updating_text">"%1$s won't run without Google Play services, which are currently updating."</string>
    <string name="fragment_interval_default">10-20</string>
    <string name="fragment_length_default">50-100</string>
    <string name="fragment_max_split_default">100-200</string>
    <string name="inbound_authorization_title">Inbounds</string>
    <string name="menu_item_clear">Clear selected</string>
    <string name="menu_item_export_proxy_app">Export to Clipboard</string>
    <string name="menu_item_import_from_file">Import from file</string>
    <string name="menu_item_import_proxy_app">Import from Clipboard</string>
    <string name="menu_item_invert">Invert</string>
    <string name="menu_item_search">Search</string>
    <string name="menu_item_select_all">Select all</string>
    <string name="menu_item_select_google_apps">Select google apps</string>
    <string name="menu_item_select_spy_apps">Select spy apps</string>
    <string name="menu_item_show_system_apps">Show system applications</string>
    <string name="mtu_default">1500</string>
    <string name="mux_default">8</string>
    <string name="noises_delay_default">10-16</string>
    <string name="port_http_default">10809</string>
    <string name="port_socks_default">10808</string>
    <string name="routing_settings_title">Routing profiles</string>
    <string name="settings_mtu_info">Range 68 to 65535</string>
    <string name="settings_mux_description">"Mux in Xray is a feature that multiplexes multiple connections into one, reducing handshake overhead and improving efficiency for proxied traffic.
Enabling this feature applies it to all server configurations."</string>
    <string name="settings_mux_handling">Handling of QUIC</string>
    <string name="settings_mux_range_info">Range -1 to 1024</string>
    <string name="settings_mux_tcp">TCP connections</string>
    <string name="settings_mux_xudp">XUDP connections</string>
    <string name="settings_xray_tun_mtu">Xray TUN MTU</string>
    <string name="summary_pref_current_ip">Connect to WiFi</string>
    <string name="title_advanced">Advanced Settings</string>
    <string name="title_ping">Ping</string>
    <string name="title_pref_auto_start_vpn">Auto-start application</string>
    <string name="title_pref_block_bindtodevice_enabled">Block bind to tunnel</string>
    <string name="title_pref_current_ip">Current IP</string>
    <string name="title_pref_fragment_advanced_options">Options</string>
    <string name="title_pref_fragment_delay">Fragment Delay (min-max)</string>
    <string name="title_pref_fragment_enabled">Enable Fragmentation</string>
    <string name="title_pref_fragment_length">Fragment Length (min-max)</string>
    <string name="title_pref_fragment_max_split">Fragment Max Split</string>
    <string name="title_pref_fragment_packets">Fragment Packets</string>
    <string name="title_pref_fragment_type">Type</string>
    <string name="title_pref_http_port">HTTP proxy port</string>
    <string name="title_pref_ip_type">Preferred IP Type</string>
    <string name="title_pref_mux_enabled">Enable Mux</string>
    <string name="title_pref_noises_delay">Delay</string>
    <string name="title_pref_noises_enabled">Enable Noises</string>
    <string name="title_pref_noises_packet">Packet</string>
    <string name="title_pref_noises_rand">Rand</string>
    <string name="title_pref_noises_rand_range">RandRange</string>
    <string name="title_pref_noises_type">Type</string>
    <string name="title_pref_per_app_proxy">Per-app Proxy Settings</string>
    <string name="title_pref_proxy_sharing_enabled">Allow connections from the LAN</string>
    <string name="title_pref_socks_port">SOCKS5 proxy port</string>
    <string name="title_pref_xray_tun_enabled">Enable Xray TUN</string>
    <string name="title_subscription">Subscription</string>
    <string name="title_tunnel">Tunnel Settings</string>
    <string name="title_vpn_settings">VPN Settings</string>
</resources>