<?xml version="1.0" encoding="utf-8"?>
<LinearLayout android:orientation="vertical" android:id="@id/ll_tunnel_settings" android:background="?settingsBackgroundFragment" android:layout_width="match_parent" android:layout_height="wrap_content" app:layout_constraintEnd_toEndOf="parent" app:layout_constraintStart_toStartOf="parent" app:layout_constraintTop_toTopOf="parent"
  xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto">
    <su.happ.proxyutility.ui.foundation.component.HappSettingsTitle android:id="@id/title_category" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="@dimen/layout_margin_spacing_secondary" android:text="@string/title_tunnel" android:layout_marginStart="@dimen/activity_horizontal_margin" />
    <su.happ.proxyutility.ui.foundation.component.HappForwardField android:id="@id/forward_routing_profiles" android:background="@drawable/bg_text_on_main" android:focusable="true" android:clickable="true" android:layout_width="match_parent" android:layout_height="wrap_content" android:layout_marginTop="6.0dp" app:title="@string/routing_settings_title" />
    <su.happ.proxyutility.ui.foundation.component.HappSettingsDivider android:id="@id/divider_routing_profiles" android:layout_width="match_parent" android:layout_height="1.0dp" />
    <su.happ.proxyutility.ui.foundation.component.HappForwardField android:id="@id/forward_per_app_proxy" android:background="@drawable/bg_text_on_main" android:focusable="true" android:clickable="true" android:layout_width="match_parent" android:layout_height="wrap_content" app:title="@string/title_pref_per_app_proxy" />
    <su.happ.proxyutility.ui.foundation.component.HappSettingsDivider android:id="@id/divider_per_app_proxy" android:layout_width="match_parent" android:layout_height="1.0dp" />
    <LinearLayout android:orientation="vertical" android:id="@id/ll_fragmentation" android:layout_width="match_parent" android:layout_height="wrap_content" android:animateLayoutChanges="true">
        <su.happ.proxyutility.ui.foundation.component.HappToggleField android:id="@id/toggle_fragmentation_enabled" android:background="@drawable/bg_text_on_main" android:focusable="true" android:clickable="true" android:layout_width="match_parent" android:layout_height="wrap_content" app:title="@string/title_pref_fragment_enabled" />
        <LinearLayout android:orientation="vertical" android:id="@id/ll_fragmentation_block" android:visibility="gone" android:layout_width="match_parent" android:layout_height="wrap_content" android:animateLayoutChanges="true">
            <TextView android:textSize="12.0sp" android:textColor="?settingsTextDescription" android:id="@id/tv_fragmentation_description" android:paddingBottom="@dimen/layout_margin_spacing" android:layout_width="wrap_content" android:layout_height="wrap_content" android:textIsSelectable="true" android:layout_marginStart="@dimen/activity_horizontal_margin" android:layout_marginEnd="@dimen/activity_horizontal_margin" />
            <su.happ.proxyutility.ui.foundation.component.HappSettingsDivider android:id="@id/divider_fragmentation_description" android:layout_width="match_parent" android:layout_height="1.0dp" />
            <su.happ.proxyutility.ui.foundation.component.HappSpinnerField android:id="@id/spinner_fragment_type" android:background="@drawable/bg_text_on_main" android:layout_width="match_parent" android:layout_height="wrap_content" app:entries="@array/fragment_type_pref" app:title="@string/title_pref_fragment_type" />
            <su.happ.proxyutility.ui.foundation.component.HappSettingsDivider android:id="@id/divider_fragmentation_type" android:layout_width="match_parent" android:layout_height="1.0dp" />
            <LinearLayout android:orientation="vertical" android:id="@id/ll_fragmentation_xray_block" android:visibility="gone" android:layout_width="match_parent" android:layout_height="wrap_content">
                <su.happ.proxyutility.ui.foundation.component.HappSpinnerField android:id="@id/spinner_fragmentation_packets" android:background="@drawable/bg_text_on_main" android:layout_width="match_parent" android:layout_height="wrap_content" app:entries="@array/fragment_packets_pref" app:title="@string/title_pref_fragment_packets" />
                <su.happ.proxyutility.ui.foundation.component.HappSettingsDivider android:id="@id/divider_fragmentation_packets" android:layout_width="match_parent" android:layout_height="1.0dp" />
                <su.happ.proxyutility.ui.foundation.component.HappInputField android:id="@id/if_fragmentation_length" android:background="@drawable/bg_text_on_main" android:focusable="true" android:clickable="true" android:layout_width="match_parent" android:layout_height="wrap_content" app:hint="@string/fragment_length_default" app:title="@string/title_pref_fragment_length" />
                <su.happ.proxyutility.ui.foundation.component.HappSettingsDivider android:id="@id/divider_fragmentation_delay" android:layout_width="match_parent" android:layout_height="1.0dp" />
                <su.happ.proxyutility.ui.foundation.component.HappInputField android:id="@id/if_fragmentation_delay" android:background="@drawable/bg_text_on_main" android:focusable="true" android:clickable="true" android:layout_width="match_parent" android:layout_height="wrap_content" app:hint="@string/fragment_interval_default" app:title="@string/title_pref_fragment_delay" />
                <su.happ.proxyutility.ui.foundation.component.HappSettingsDivider android:id="@id/divider_fragmentation_max_split" android:layout_width="match_parent" android:layout_height="1.0dp" />
                <su.happ.proxyutility.ui.foundation.component.HappInputField android:id="@id/if_fragmentation_max_split" android:background="@drawable/bg_text_on_main" android:focusable="true" android:clickable="true" android:layout_width="match_parent" android:layout_height="wrap_content" app:hint="@string/fragment_max_split_default" app:title="@string/title_pref_fragment_max_split" />
                <su.happ.proxyutility.ui.foundation.component.HappSettingsDivider android:id="@id/divider_fragmentation_end" android:layout_width="match_parent" android:layout_height="1.0dp" />
                <su.happ.proxyutility.ui.foundation.component.HappToggleField android:id="@id/toggle_noises_enabled" android:background="@drawable/bg_text_on_main" android:focusable="true" android:clickable="true" android:layout_width="match_parent" android:layout_height="wrap_content" app:title="@string/title_pref_noises_enabled" />
                <su.happ.proxyutility.ui.foundation.component.HappSettingsDivider android:id="@id/divider_noises_enabled" android:layout_width="match_parent" android:layout_height="1.0dp" />
                <LinearLayout android:orientation="vertical" android:id="@id/ll_noises_fields" android:layout_width="match_parent" android:layout_height="wrap_content" android:animateLayoutChanges="true">
                    <su.happ.proxyutility.ui.foundation.component.HappSpinnerField android:id="@id/spinner_noises_type" android:background="@drawable/bg_text_on_main" android:layout_width="match_parent" android:layout_height="wrap_content" app:entries="@array/noises_type_pref" app:title="@string/title_pref_noises_type" />
                    <su.happ.proxyutility.ui.foundation.component.HappSettingsDivider android:id="@id/divider_noises_type" android:layout_width="match_parent" android:layout_height="1.0dp" />
                    <su.happ.proxyutility.ui.foundation.component.HappInputField android:id="@id/if_noises_packet" android:background="@drawable/bg_text_on_main" android:focusable="true" android:clickable="true" android:layout_width="match_parent" android:layout_height="wrap_content" app:hint="1A,2B,3C" app:title="@string/title_pref_noises_packet" />
                    <su.happ.proxyutility.ui.foundation.component.HappSettingsDivider android:id="@id/divider_noises_packet" android:layout_width="match_parent" android:layout_height="1.0dp" />
                    <su.happ.proxyutility.ui.foundation.component.HappInputField android:id="@id/if_noises_delay" android:background="@drawable/bg_text_on_main" android:focusable="true" android:clickable="true" android:layout_width="match_parent" android:layout_height="wrap_content" app:hint="@string/noises_delay_default" app:title="@string/title_pref_noises_delay" />
                    <su.happ.proxyutility.ui.foundation.component.HappSettingsDivider android:id="@id/divider_noises_delay" android:layout_width="match_parent" android:layout_height="1.0dp" />
                    <su.happ.proxyutility.ui.foundation.component.HappInputField android:id="@id/if_noises_rand" android:background="@drawable/bg_text_on_main" android:layout_width="match_parent" android:layout_height="wrap_content" app:hint="1-8192" app:title="@string/title_pref_noises_rand" />
                    <su.happ.proxyutility.ui.foundation.component.HappSettingsDivider android:id="@id/divider_noises_rand" android:layout_width="match_parent" android:layout_height="1.0dp" />
                    <su.happ.proxyutility.ui.foundation.component.HappInputField android:id="@id/if_noises_rand_range" android:background="@drawable/bg_text_on_main" android:layout_width="match_parent" android:layout_height="wrap_content" app:hint="0-255" app:title="@string/title_pref_noises_rand_range" />
                </LinearLayout>
            </LinearLayout>
            <LinearLayout android:orientation="vertical" android:id="@id/ll_fragmentation_advanced_block" android:visibility="gone" android:layout_width="match_parent" android:layout_height="wrap_content">
                <su.happ.proxyutility.ui.foundation.component.HappInputField android:id="@id/if_fragmentation_advanced_options" android:background="@drawable/bg_text_on_main" android:layout_width="match_parent" android:layout_height="wrap_content" app:title="@string/title_pref_fragment_advanced_options" />
            </LinearLayout>
        </LinearLayout>
    </LinearLayout>
    <su.happ.proxyutility.ui.foundation.component.HappSettingsDivider android:id="@id/divider_fragmentation" android:layout_width="match_parent" android:layout_height="1.0dp" />
    <LinearLayout android:orientation="vertical" android:id="@id/ll_mux" android:layout_width="match_parent" android:layout_height="wrap_content" android:animateLayoutChanges="true">
        <su.happ.proxyutility.ui.foundation.component.HappToggleField android:id="@id/toggle_mux_enabled" android:background="@drawable/bg_text_on_main" android:focusable="true" android:clickable="true" android:layout_width="match_parent" android:layout_height="wrap_content" app:title="@string/title_pref_mux_enabled" />
        <LinearLayout android:orientation="vertical" android:id="@id/ll_mux_block" android:visibility="gone" android:layout_width="match_parent" android:layout_height="wrap_content" android:animateLayoutChanges="true">
            <su.happ.proxyutility.ui.foundation.component.HappTextView android:textSize="12.0sp" android:textColor="?settingsTextDescription" android:id="@id/tv_mux_description" android:paddingBottom="@dimen/layout_margin_spacing" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/settings_mux_description" android:layout_marginStart="@dimen/activity_horizontal_margin" android:layout_marginEnd="@dimen/activity_horizontal_margin" />
            <su.happ.proxyutility.ui.foundation.component.HappSettingsDivider android:id="@id/divider_mux_description" android:layout_width="match_parent" android:layout_height="1.0dp" />
            <su.happ.proxyutility.ui.foundation.component.HappInputField android:id="@id/if_mux_tcp" android:background="@drawable/bg_text_on_main" android:focusable="true" android:clickable="true" android:layout_width="match_parent" android:layout_height="wrap_content" app:description="@string/settings_mux_range_info" app:hint="@string/mux_default" app:title="@string/settings_mux_tcp" />
            <su.happ.proxyutility.ui.foundation.component.HappSettingsDivider android:id="@id/divider_mux_tcp" android:layout_width="match_parent" android:layout_height="1.0dp" />
            <su.happ.proxyutility.ui.foundation.component.HappInputField android:id="@id/if_mux_xudp" android:background="@drawable/bg_text_on_main" android:focusable="true" android:clickable="true" android:layout_width="match_parent" android:layout_height="wrap_content" app:description="@string/settings_mux_range_info" app:hint="@string/mux_default" app:title="@string/settings_mux_xudp" />
            <su.happ.proxyutility.ui.foundation.component.HappSettingsDivider android:id="@id/divider_mux_xudp" android:layout_width="match_parent" android:layout_height="1.0dp" />
            <su.happ.proxyutility.ui.foundation.component.HappSpinnerField android:id="@id/spinner_mux_handling" android:background="@drawable/bg_text_on_main" android:layout_width="match_parent" android:layout_height="wrap_content" app:entries="@array/mux_xudp_quic_value" app:title="@string/settings_mux_handling" />
        </LinearLayout>
    </LinearLayout>
    <su.happ.proxyutility.ui.foundation.component.HappSettingsDivider android:id="@id/divider_mux" android:layout_width="match_parent" android:layout_height="1.0dp" />
    <su.happ.proxyutility.ui.foundation.component.HappSpinnerField android:orientation="horizontal" android:id="@id/spinner_type_ip" android:background="@drawable/bg_text_on_main" android:layout_width="match_parent" android:layout_height="wrap_content" app:entries="@array/pref_ip_type" app:title="@string/title_pref_ip_type" />
    <su.happ.proxyutility.ui.foundation.component.HappSettingsDivider android:id="@id/divider_inbound_auth" android:layout_width="match_parent" android:layout_height="1.0dp" />
    <su.happ.proxyutility.ui.foundation.component.HappForwardField android:id="@id/ff_inbound_auth" android:background="@drawable/bg_text_on_main" android:layout_width="match_parent" android:layout_height="wrap_content" app:title="@string/inbound_authorization_title" />
    <su.happ.proxyutility.ui.foundation.component.HappSettingsDivider android:id="@id/divider_xray_tun" android:layout_width="match_parent" android:layout_height="1.0dp" />
    <LinearLayout android:orientation="vertical" android:id="@id/ll_xray_tun" android:layout_width="match_parent" android:layout_height="wrap_content" android:animateLayoutChanges="true">
        <su.happ.proxyutility.ui.foundation.component.HappToggleField android:id="@id/toggle_xray_tun_enabled" android:background="@drawable/bg_text_on_main" android:focusable="true" android:clickable="true" android:layout_width="match_parent" android:layout_height="wrap_content" app:title="@string/title_pref_xray_tun_enabled" />
        <LinearLayout android:orientation="vertical" android:id="@id/ll_xray_tun_block" android:visibility="gone" android:layout_width="match_parent" android:layout_height="wrap_content" android:animateLayoutChanges="true">
            <su.happ.proxyutility.ui.foundation.component.HappSettingsDivider android:id="@id/divider_xray_tun_mtu" android:layout_width="match_parent" android:layout_height="1.0dp" />
            <su.happ.proxyutility.ui.foundation.component.HappInputField android:id="@id/if_xray_tun_mtu" android:background="@drawable/bg_text_on_main" android:focusable="true" android:clickable="true" android:layout_width="match_parent" android:layout_height="wrap_content" app:description="@string/settings_mtu_info" app:hint="@string/mtu_default" app:title="@string/settings_xray_tun_mtu" />
        </LinearLayout>
    </LinearLayout>
    <su.happ.proxyutility.ui.foundation.component.HappSettingsDivider android:id="@id/divider_block_bindtodevice" android:layout_width="match_parent" android:layout_height="1.0dp" />
    <su.happ.proxyutility.ui.foundation.component.HappToggleField android:id="@id/toggle_block_bindtodevice_enabled" android:background="@drawable/bg_text_on_main" android:focusable="true" android:clickable="true" android:layout_width="match_parent" android:layout_height="wrap_content" app:title="@string/title_pref_block_bindtodevice_enabled" />
</LinearLayout>
