<?xml version="1.0" encoding="utf-8"?>
<LinearLayout android:orientation="vertical" android:id="@id/ll_advanced_settings" android:background="?settingsBackgroundFragment" android:layout_width="match_parent" android:layout_height="wrap_content" app:layout_constraintEnd_toEndOf="parent" app:layout_constraintStart_toStartOf="parent" app:layout_constraintTop_toTopOf="parent"
  xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto">
    <su.happ.proxyutility.ui.foundation.component.HappSettingsTitle android:id="@id/title_category" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="@dimen/layout_margin_spacing_secondary" android:text="@string/title_advanced" android:layout_marginStart="@dimen/activity_horizontal_margin" />
    <su.happ.proxyutility.ui.foundation.component.HappForwardField android:id="@id/forward_vpn" android:background="@drawable/bg_text_on_main" android:focusable="true" android:clickable="true" android:layout_width="match_parent" android:layout_height="wrap_content" app:title="@string/title_vpn_settings" />
    <su.happ.proxyutility.ui.foundation.component.HappSettingsDivider android:id="@id/divider_advanced" android:layout_width="match_parent" android:layout_height="1.0dp" />
    <su.happ.proxyutility.ui.foundation.component.HappForwardField android:id="@id/forward_subscription" android:background="@drawable/bg_text_on_main" android:focusable="true" android:clickable="true" android:layout_width="match_parent" android:layout_height="wrap_content" app:title="@string/title_subscription" />
    <su.happ.proxyutility.ui.foundation.component.HappSettingsDivider android:id="@id/divider_subscription" android:layout_width="match_parent" android:layout_height="1.0dp" />
    <su.happ.proxyutility.ui.foundation.component.HappForwardField android:id="@id/forward_ping" android:background="@drawable/bg_text_on_main" android:focusable="true" android:clickable="true" android:layout_width="match_parent" android:layout_height="wrap_content" app:title="@string/title_ping" />
    <su.happ.proxyutility.ui.foundation.component.HappSettingsDivider android:id="@id/divider_ping" android:layout_width="match_parent" android:layout_height="1.0dp" />
    <LinearLayout android:orientation="vertical" android:id="@id/ll_allow_connection_from_lan" android:layout_width="match_parent" android:layout_height="wrap_content" android:animateLayoutChanges="true">
        <su.happ.proxyutility.ui.foundation.component.HappToggleField android:id="@id/toggle_allow_connection_from_lan_enabled" android:background="@drawable/bg_text_on_main" android:focusable="true" android:clickable="true" android:layout_width="match_parent" android:layout_height="wrap_content" app:title="@string/title_pref_proxy_sharing_enabled" />
        <LinearLayout android:orientation="vertical" android:id="@id/cl_allow_connection_from_lan_block" android:visibility="gone" android:layout_width="match_parent" android:layout_height="wrap_content" android:animateLayoutChanges="true">
            <su.happ.proxyutility.ui.foundation.component.HappSettingsDivider android:id="@id/divider_allow_connection_from_lan_enabled" android:layout_width="match_parent" android:layout_height="1.0dp" />
            <su.happ.proxyutility.ui.foundation.component.HappInfoField android:id="@id/if_current_ip" android:background="@drawable/bg_text_on_main" android:focusable="true" android:clickable="true" android:layout_width="match_parent" android:layout_height="wrap_content" app:hint="@string/summary_pref_current_ip" app:title="@string/title_pref_current_ip" />
            <su.happ.proxyutility.ui.foundation.component.HappSettingsDivider android:id="@id/divider_current_ip" android:layout_width="match_parent" android:layout_height="1.0dp" />
            <su.happ.proxyutility.ui.foundation.component.HappInfoField android:id="@id/if_socks_port" android:background="@drawable/bg_text_on_main" android:focusable="true" android:clickable="true" android:layout_width="match_parent" android:layout_height="wrap_content" app:copyOnShortClick="true" app:hint="@string/port_socks_default" app:title="@string/title_pref_socks_port" />
            <su.happ.proxyutility.ui.foundation.component.HappSettingsDivider android:id="@id/divider_socks_port" android:layout_width="match_parent" android:layout_height="1.0dp" />
            <su.happ.proxyutility.ui.foundation.component.HappInfoField android:id="@id/if_http_port" android:background="@drawable/bg_text_on_main" android:focusable="true" android:clickable="true" android:layout_width="match_parent" android:layout_height="wrap_content" app:copyOnShortClick="true" app:hint="@string/port_http_default" app:title="@string/title_pref_http_port" />
        </LinearLayout>
    </LinearLayout>
    <su.happ.proxyutility.ui.foundation.component.HappSettingsDivider android:id="@id/divider_auto_start_vpn" android:layout_width="match_parent" android:layout_height="1.0dp" />
    <su.happ.proxyutility.ui.foundation.component.HappToggleField android:id="@id/toggle_auto_start_vpn" android:background="@drawable/bg_text_on_main" android:focusable="true" android:clickable="true" android:layout_width="match_parent" android:layout_height="wrap_content" app:title="@string/title_pref_auto_start_vpn" />
</LinearLayout>
